force-app/main/default/objects/BL_CommunitySettings__c/BL_CommunitySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Brite League Community Settings</label>
</CustomObject>