force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_CommunityPlusUserProfileId__c.field-meta.xml
<CustomField>
    <fullName>BL_CommunityPlusUserProfileId__c</fullName>
    <label>CommunityPlusUserProfileId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>