force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_CommunityPlusUserProfileName__c.field-meta.xml
<CustomField>
    <fullName>BL_CommunityPlusUserProfileName__c</fullName>
    <label>CommunityPlusUserProfileName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>