force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_CommunityUserAccountName__c.field-meta.xml
<CustomField>
    <fullName>BL_CommunityUserAccountName__c</fullName>
    <label>Community User Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>