force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_CommunityUserProfileId__c.field-meta.xml
<CustomField>
    <fullName>BL_CommunityUserProfileId__c</fullName>
    <label>Community User Profile Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>