force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_CommunityUserProfileName__c.field-meta.xml
<CustomField>
    <fullName>BL_CommunityUserProfileName__c</fullName>
    <label>Community User Profile Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>