force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_Number_Of_Community_Plus_Licenses__c.field-meta.xml
<CustomField>
    <fullName>BL_Number_Of_Community_Plus_Licenses__c</fullName>
    <label>Number Of Community Plus Licenses</label>
    <length>50</length>
    <type>Text</type>
</CustomField>