force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_NumberOfCommunityLicenses__c.field-meta.xml
<CustomField>
    <fullName>BL_NumberOfCommunityLicenses__c</fullName>
    <label>Number of Community Licenses</label>
    <length>50</length>
    <type>Text</type>
</CustomField>