force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_PlayerPermissionSetId__c.field-meta.xml
<CustomField>
    <fullName>BL_PlayerPermissionSetId__c</fullName>
    <label>Player Permission Set Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>