force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_RegistrationUsernameOrgSuffix__c.field-meta.xml
<CustomField>
    <fullName>BL_RegistrationUsernameOrgSuffix__c</fullName>
    <label>Registration Username Org Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>