force-app/main/default/objects/BL_CommunitySettings__c/fields/BL_RestrictedRegistrationDomain__c.field-meta.xml
<CustomField>
    <fullName>BL_RestrictedRegistrationDomain__c</fullName>
    <label>Restricted Registration Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>